--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,5 @@
     </div>
-    <footer style=" width: 100%; background-color: #333; position: fixed; color: white; height: 50px; bottom: 0; text-align: center;">
+    <footer style=" width: 100%; background-color: #333;  color: white; height: 50px; bottom: 0; text-align: center;">
         <p>&copy; 2024 Land Marketplace. All rights reserved.</p>
     </footer>
 </body>
